--- a/vulkanTriangle/notebook/0504.md
+++ b/vulkanTriangle/notebook/0504.md
@@ -23,3 +23,45 @@ struct hash<Vertex> {
 ```
 
 ---
+
+标准库的哈希容器（如 `unordered_map`、`unordered_set`）底层依赖 `std::hash<T>` 来为每个元素生成哈希值。
+
+标准库内建类型（比如 `int`、`std::string`）都有默认的 `std::hash` 实现。但对于自定义类型 `Vertex`，必须要知道怎么把这个对象变成一个 `size_t` 值 —— 这就是 **哈希函数**的作用。
+
+但是在此之前，还需要在自定义结构体中重载operator==运算符
+
+```c++
+        bool operator==(const Vertex& other) const
+        {
+            return pos == other.pos &&
+                color == other.color &&
+                texCoord == other.texCoord;
+        }
+```
+
+然后就是特化hash
+
+```c++
+namespace std {
+    template<>
+    struct hash<Vertex> {
+        size_t operator()(const Vertex& vertex) const {
+            return ((hash<glm::vec3>()(vertex.pos) ^
+                    (hash<glm::vec3>()(vertex.color) << 1)) >> 1) ^
+                    (hash<glm::vec2>()(vertex.texCoord) << 1);
+        }
+    };
+}
+```
+
+通过包含：
+
+```c++
+#define GLM_ENABLE_EXPERIMENTAL
+#include <glm/gtx/hash.hpp>
+```
+
+调用仿函数std::hash<>()创建一个临时变量，再传入参数;
+
+通过异或与位移运算符最终返回size_t的哈希值
+
